# daily-report-agent

./: .gitignore  Dockerfile  RUN.md  docker-compose.yml  pyproject.toml  report-Pilbara Minerals-2026-06-04.md  requirements.txt
.cursor/: mcp.json
agent/: agent.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
servers/: mcp_base.py
servers/lme_price_mcp/: __main__.py  server.py
servers/mineral_pdf_mcp/: __main__.py  server.py
servers/mining_news_mcp/: __main__.py  server.py
