[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-report-agent"
version = "1.0.0"
description = "MCP-based Daily Research Report Agent"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pymupdf>=1.24.0",
    "duckduckgo-search>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "openai>=1.0.0",
]

[tool.setuptools.packages.find]
include = ["servers", "servers.*", "agent"]
